Buger menu more visible

--- a/core/navbar.less
+++ b/core/navbar.less
@@ -53,3 +53,12 @@
    95% { transform: rotate(-15deg); }
   100% { transform: rotate(0deg); }
 }
+.navbar-burger {
+	span {
+		color: @fp-text-normal;
+	}
+}
+
+.navbar-menu.is-active {
+	background: @fp-background-white-normal;
+}
